# sqlpp11_test

./: CMakeLists.txt  main.cpp  run.bat
cmake/: FindMariaDB.cmake
database/: CMakeLists.txt  abilities.h  abilities_charges.h  account_ip_record.h  accounts.h  accounts_banned.h  accounts_sessions.h  auction_house.h  audit_chat.h  audit_gm.h  augments.h  automaton_abilities.h  automaton_spells.h  bcnm_battlefield.h  bcnm_info.h  bcnm_treasure_chests.h  blue_spell_list.h  blue_spell_mods.h  blue_traits.h  campaign_map.h  campaign_nation.h  char_base.h  char_blacklist.h  char_effects.h  char_equip.h  char_exp.h  char_history.h  char_inventory.h  char_job_points.h  char_jobs.h  char_look.h  char_merit.h  char_pet.h  char_points.h  char_profile.h  char_recast.h  char_skills.h  char_spells.h  char_stats.h  char_storage.h  (+69 more)
